--- a/titanic_ml.ipynb
+++ b/titanic_ml.ipynb
@@ -1775,12 +1775,9 @@
     "import pandas as pd\n",
     "from sklearn.compose import ColumnTransformer\n",
     "\n",
-    "from sklearn.impute import KNNImputer, SimpleImputer, KNNImputer\n",
-    "from sklearn.linear_model import Ridge\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.preprocessing import StandardScaler, OneHotEncoder, LabelEncoder, OrdinalEncoder\n",
+    "from sklearn.impute import KNNImputer\n",
+    "from sklearn.preprocessing import OrdinalEncoder\n",
     "from sklearn.pipeline import Pipeline\n",
-    "from sklearn.metrics import mean_squared_error\n",
     "\n",
     "from sklearn.tree import DecisionTreeClassifier\n"
    ],
@@ -1807,16 +1804,13 @@
     "\n",
     "pipe_num = Pipeline([('knn', KNNImputer(n_neighbors=5))])\n",
     "\n",
-    "col_transformer1 = ColumnTransformer(\n",
-    "    [('cat_preproc', pipe_cat, ['Embarked', 'Sex'])],\n",
-    "     # ('num_imputer', pipe_num,['Age'])],\n",
-    "     # ('num_imputer', pipe_num, [])],\n",
-    "    remainder='passthrough',\n",
-    "    force_int_remainder_cols=False)\n",
+    "col_transformer1 = ColumnTransformer([('cat_preproc', pipe_cat, ['Embarked', 'Sex'])],\n",
+    "                                     remainder='passthrough',\n",
+    "                                     force_int_remainder_cols=False)\n",
     "\n",
     "model = DecisionTreeClassifier(random_state=0)\n",
     "\n",
-    "final_pipe = Pipeline([('preproc1', col_transformer1),('num_inputer', pipe_num),  ('model', model)])"
+    "final_pipe = Pipeline([('preproc1', col_transformer1), ('num_inputer', pipe_num), ('model', model)])"
    ],
    "id": "908d8e66b2e6b427",
    "outputs": [],
@@ -2993,6 +2987,66 @@
    "execution_count": 28
   },
   {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-21T09:49:46.102168Z",
+     "start_time": "2025-01-21T09:49:46.034104Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "final_pipe.named_steps['model'].feature_importances_",
+   "id": "a5e202f2a4e8f4e5",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.04454388, 0.29283535, 0.10215548, 0.26618493, 0.05663961,\n",
+       "       0.03311038, 0.20453037])"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 36
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-21T09:51:22.262429Z",
+     "start_time": "2025-01-21T09:51:22.252551Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "X_train.columns",
+   "id": "21432cf7d61de70d",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Pclass', 'Sex', 'Age', 'SibSp', 'Parch', 'Fare', 'Embarked'], dtype='object')"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 37
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "Максимальное влияние параметров:\n",
+    "1. Sex - 0.29\n",
+    "2. SibSp (наличие родственников) - 0.27\n",
+    "3. Embarked (порт назначения) - 0.20\n"
+   ],
+   "id": "9824a66b00af95f9"
+  },
+  {
    "metadata": {},
    "cell_type": "markdown",
    "source": "### Кроссвалидация",
@@ -3008,11 +3062,10 @@
    "cell_type": "code",
    "source": [
     "\n",
-    "from sklearn.model_selection import cross_validate\n",
     "from sklearn.model_selection import cross_val_score\n",
     "\n",
     "cv_results = cross_val_score(final_pipe, X_train, y_train, cv=5,\n",
-    "                            scoring='accuracy')"
+    "                             scoring='accuracy')"
    ],
    "id": "5b72078201b04088",
    "outputs": [],
