--- a/titanic_ml4-2_sp.ipynb
+++ b/titanic_ml4-2_sp.ipynb
@@ -383,7 +383,7 @@
    "cell_type": "code",
    "source": [
     "mapper = DataFrameMapper([\n",
-    "    ('Name', [FunctionTransformer(get_title), OrdinalEncoder()]),\n",
+    "    ('Name', [FunctionTransformer(get_title), OrdinalEncoder()]), # name of the function\n",
     "    ('Cabin', [FunctionTransformer(get_level),OrdinalEncoder()]),\n",
     "    (['Pclass', 'Fare'], IncreasePclass(), {'alias': 'PFare'}),\n",
     "    (['Embarked'], OrdinalEncoder()),\n",
